tests/parser/stmt_parser/snapshots/kasl__tests__parser__stmt_parser__op_decl_parser__parse_infix_def_left.snap
---
source: src/tests/parser/stmt_parser/op_decl_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 56,
        },
        kind: InfixDefine {
            symbol: "*",
            props: InfixOperatorProperties {
                precedence: 50,
                associativity: Left,
                range: Range {
                    start: 19,
                    end: 54,
                },
            },
        },
    },
]
